feat: enhance event dashboard and subscription features; add userId parameter to dashboard summaries and new endpoint for subscribed events